logs/conchoctopus.log
Listing '.'...
Listing './bin'...
Compiling './bin/copus.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/conchoctopus'...
Compiling './lib/python3.5/site-packages/conchoctopus/connect.py'...
***   File "./lib/python3.5/site-packages/conchoctopus/connect.py", line 244
    except EncryptedKeyError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/conchoctopus/copus.py'...
***   File "./lib/python3.5/site-packages/conchoctopus/copus.py", line 343
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/conchoctopus/fabricapi.py'...
***   File "./lib/python3.5/site-packages/conchoctopus/fabricapi.py", line 543
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/conchoctopus/test'...
Compiling './lib/python3.5/site-packages/conchoctopus/test/external_test.py'...
***   File "./lib/python3.5/site-packages/conchoctopus/test/external_test.py", line 19
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/conchoctopus-0.1a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
